--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,12 @@
 }
 
 .card-container {
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
   width: 500px;
   height: 300px;
+  justify-content: center;
+  align-items: center;
   border-width: 1px;
   border-style: solid;
   border-color: white;
@@ -53,6 +56,10 @@
   background-color: white;
   margin-left: 30px;
   margin-right: 30px;
+}
+
+.break {
+  flex-basis: 100%;
 }
 
 img {
@@ -72,3 +79,40 @@ img {
   margin-left: 10px;
   margin-right: 10px;
 }
+
+.rectangle {
+  width: 200px; 
+  height: 10px; 
+  max-width: 200px; 
+  max-height: 10px;
+  background: #EFEFEF;
+  position: relative;
+  border-radius: 25px;
+}
+
+.leaning {
+  display: flex;
+  width: 70px; 
+  height: 10px; 
+  max-width: 100px; 
+  max-height: 10px;
+  position: absolute;
+  border-radius: 25px;
+}
+
+.left {
+  right: 50%; 
+  background: #58CDFF;
+}
+
+.right {
+  left: 50%; 
+  background: #d86464;
+}
+
+a {
+  margin: 0px 10px;
+}
+
+
+
