--- a/src/App.css
+++ b/src/App.css
@@ -114,5 +114,33 @@ a {
   margin: 0px 10px;
 }
 
+.detailed-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 500px;
+  height: 800px;
+  justify-content: space-around;
+  /*align-items: center;*/
+  border-width: 1px;
+  border-style: solid;
+  border-color: white;
+  border-radius: 20px;
+  background-color: white;
+  margin-left: 30px;
+  margin-right: 30px;
+}
 
+.vl {
+  border-left: 1px solid lightgray;
+  height: 780px;
+  /*left: 50%;*/
+  position: absolute;
+}
+
+.detailed-card-left {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
