--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
  /* text-align: center;*/
- background-color: black;
+ /* background-color: black; */
 }
 
 .App-logo {
@@ -45,18 +45,37 @@
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  width: 500px;
-  height: 300px;
+  height: 450px;
   justify-content: center;
   align-items: center;
   border-width: 1px;
   border-style: solid;
   border-color: white;
-  border-radius: 20px;
+  border-radius: 25px;
   background-color: white;
-  margin-left: 30px;
-  margin-right: 30px;
+  flex: 1;
+  max-width: 300px;
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
 }
+
+.react-3d-carousel .slider-container .slider-content .slider-single .slider-single-content {
+  border-radius: 25px;
+  box-shadow: none;
+}
+
+/* .react-3d-carousel .slider-container .slider-content .slider-single.active{
+  width: auto;
+} */
+
+/* .react-3d-carousel .slider-container{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  left: auto;
+  top: auto;
+} */
 
 .break {
   flex-basis: 100%;
@@ -71,6 +90,7 @@ img {
 
 .empty-card {
   text-align: center;
+  margin: 0px 30px;
 }
 
 .selected-card-container {
