--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,8 @@
 
 .card-container {
   display: flex;
-  flex-wrap: wrap;
-  height: 450px;
+  flex-direction: column;
+  height: 500px;
   justify-content: center;
   align-items: center;
   border-width: 1px;
@@ -54,7 +54,7 @@
   border-radius: 25px;
   background-color: white;
   flex: 1;
-  max-width: 300px;
+  max-width: 400px;
   box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
 }
 
@@ -63,22 +63,8 @@
   box-shadow: none;
 }
 
-/* .react-3d-carousel .slider-container .slider-content .slider-single.active{
-  width: auto;
-} */
-
-/* .react-3d-carousel .slider-container{
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  left: auto;
-  top: auto;
-} */
-
 .break {
-  flex-basis: 100%;
+  /* flex-basis: 100%; */
 }
 
 img {
@@ -140,11 +126,13 @@ img {
 .left {
   right: 50%; 
   background: #58CDFF;
+  border-radius: 25px 0px 0px 25px;
 }
 
 .right {
   left: 50%; 
   background: #d86464;
+  border-radius: 0px 25px 25px 0px;
 }
 
 a {
@@ -193,3 +181,22 @@ a {
   margin-bottom: 2px;
 }
 
+.avg-position-slider-container {
+  display: flex;
+  align-items: center;
+}
+
+.spectrum-label {
+  margin: 0 16px;
+}
+
+.select-card-btn {
+  font-family: "Spartan";
+  font-weight: 700;
+  color: #c4c4c4;
+  background-color: transparent;
+  padding: 10px 40px 8px;
+  margin: 0px 4px;
+  border: 2.5px solid #c4c4c4;
+  border-radius: 25px;
+}
