--- a/src/App.css
+++ b/src/App.css
@@ -200,3 +200,26 @@ a {
   border: 2.5px solid #c4c4c4;
   border-radius: 25px;
 }
+
+
+.candidate-img-container {
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+}
+.candidate-img {
+  min-width: 100%;
+}
+
+.react-3d-carousel .slider-container .slider-right div {
+  border: none;
+}
+.react-3d-carousel .slider-container .slider-left div {
+  border: none;
+}
+
+.fa {
+  color: #A9A9A9;
+  font-size: 40px;
+}
