--- a/src/App.css
+++ b/src/App.css
@@ -115,9 +115,7 @@ img {
   display: flex;
   justify-content: center;
   width: 10px; 
-  height: 20px; 
-  /* max-width: 100px; 
-  max-height: 20px; */
+  height: 10px; 
   position: absolute;
   border-radius: 25px;
   background: #ffe344;
@@ -142,7 +140,7 @@ a {
 .detailed-card-container {
   display: flex;
   flex-wrap: wrap;
-  width: 500px;
+  max-width: 800px;
   height: 800px;
   justify-content: space-around;
   /*align-items: center;*/
@@ -153,6 +151,8 @@ a {
   background-color: white;
   margin-left: 30px;
   margin-right: 30px;
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+  padding: 20px;
 }
 
 .vl {
