--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,10 @@ img {
 .empty-card {
   text-align: center;
   margin: 0px 30px;
+  background-color: transparent;
+  border: none;
+  color: #c4c4c4;
+  font-weight: 700;
 }
 
 .selected-card-container {
@@ -196,6 +200,7 @@ a {
 
 .select-card-btn {
   font-family: "Spartan";
+  font-size: 16px;
   font-weight: 700;
   color: #c4c4c4;
   background-color: transparent;
@@ -292,4 +297,12 @@ a.text-link {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.topic-heading {
+  font-size: 16px;
+}
+
+.select-text {
+  margin: 10px;
 }
