--- a/src/App.css
+++ b/src/App.css
@@ -216,6 +216,7 @@ a {
   height: 200px;
   border-radius: 100px;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 .candidate-img {
   min-width: 100%;
@@ -302,6 +303,10 @@ a.text-link {
 .topic-heading {
   font-size: 16px;
 }
+
+/*.candidate-name-container {
+  font-size: 16px;
+}*/
 
 .select-text {
   margin: 10px;
